# cg_racer

./: .gitignore  .nvimrc  CMakeLists.txt  Doxyfile  LICENSE  README.md  \  cmock_config.yml  compile_commands.json  run.sh  spaceracer.c  spaceracer.h
.ccls-cache/@@media@ssd2@dev@spaceracer/: @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@X11@X.h.blob  @usr@include@X11@XKBlib.h.blob  @usr@include@X11@Xatom.h.blob  @usr@include@X11@Xcursor@Xcursor.h.blob  @usr@include@X11@Xdefs.h.blob  @usr@include@X11@Xfuncproto.h.blob  @usr@include@X11@Xlib.h.blob  @usr@include@X11@Xmd.h.blob  @usr@include@X11@Xosdefs.h.blob  @usr@include@X11@Xresource.h.blob  @usr@include@X11@Xutil.h.blob  @usr@include@X11@cursorfont.h.blob  @usr@include@X11@extensions@XI2.h.blob  @usr@include@X11@extensions@XInput2.h.blob  @usr@include@X11@extensions@XKB.h.blob  @usr@include@X11@extensions@XKBstr.h.blob  @usr@include@X11@extensions@Xfixes.h.blob  @usr@include@X11@extensions@Xge.h.blob  @usr@include@X11@extensions@Xinerama.h.blob  @usr@include@X11@extensions@Xrandr.h.blob  @usr@include@X11@extensions@Xrender.h.blob  @usr@include@X11@extensions@randr.h.blob  @usr@include@X11@extensions@render.h.blob  @usr@include@X11@extensions@xfixeswire.h.blob  @usr@include@X11@keysym.h.blob  @usr@include@X11@keysymdef.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  (+184 more)
.ccls-cache/@@media@ssd2@dev@spaceracer-c/: @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@X11@X.h.blob  @usr@include@X11@XKBlib.h.blob  @usr@include@X11@Xatom.h.blob  @usr@include@X11@Xcursor@Xcursor.h.blob  @usr@include@X11@Xdefs.h.blob  @usr@include@X11@Xfuncproto.h.blob  @usr@include@X11@Xlib.h.blob  @usr@include@X11@Xmd.h.blob  @usr@include@X11@Xosdefs.h.blob  @usr@include@X11@Xresource.h.blob  @usr@include@X11@Xutil.h.blob  @usr@include@X11@cursorfont.h.blob  @usr@include@X11@extensions@XI2.h.blob  @usr@include@X11@extensions@XInput2.h.blob  @usr@include@X11@extensions@XKB.h.blob  @usr@include@X11@extensions@XKBstr.h.blob  @usr@include@X11@extensions@Xfixes.h.blob  @usr@include@X11@extensions@Xge.h.blob  @usr@include@X11@extensions@Xinerama.h.blob  @usr@include@X11@extensions@Xrandr.h.blob  @usr@include@X11@extensions@Xrender.h.blob  @usr@include@X11@extensions@randr.h.blob  @usr@include@X11@extensions@render.h.blob  @usr@include@X11@extensions@xfixeswire.h.blob  @usr@include@X11@keysym.h.blob  @usr@include@X11@keysymdef.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  (+189 more)
.ccls-cache/@media@ssd2@dev@spaceracer/: build@extern@glfw@src@glfw_config.h.blob  extern@glfw@deps@getopt.c.blob  extern@glfw@deps@getopt.h.blob  extern@glfw@deps@glad@gl.h.blob  extern@glfw@deps@glad@khrplatform.h.blob  extern@glfw@deps@glad@vk_platform.h.blob  extern@glfw@deps@glad@vulkan.h.blob  extern@glfw@deps@glad_gl.c.blob  extern@glfw@deps@glad_vulkan.c.blob  extern@glfw@deps@linmath.h.blob  extern@glfw@deps@nuklear.h.blob  extern@glfw@deps@nuklear_glfw_gl2.h.blob  extern@glfw@deps@stb_image_write.h.blob  extern@glfw@deps@tinycthread.c.blob  extern@glfw@deps@tinycthread.h.blob  extern@glfw@examples@boing.c.blob  extern@glfw@examples@gears.c.blob  (+66 more)
.ccls-cache/@media@ssd2@dev@spaceracer-c/: build@extern@glfw@src@glfw_config.h.blob  extern@glad@include@KHR@khrplatform.h.blob  extern@glad@include@glad@glad.h.blob  extern@glad@src@glad.c.blob  extern@glfw@deps@getopt.c.blob  extern@glfw@deps@getopt.h.blob  extern@glfw@deps@glad@gl.h.blob  extern@glfw@deps@glad@khrplatform.h.blob  extern@glfw@deps@glad@vk_platform.h.blob  extern@glfw@deps@glad@vulkan.h.blob  extern@glfw@deps@glad_gl.c.blob  extern@glfw@deps@glad_vulkan.c.blob  extern@glfw@deps@linmath.h.blob  extern@glfw@deps@nuklear.h.blob  extern@glfw@deps@nuklear_glfw_gl2.h.blob  extern@glfw@deps@stb_image_write.h.blob  extern@glfw@deps@tinycthread.c.blob  extern@glfw@deps@tinycthread.h.blob  extern@glfw@examples@boing.c.blob  extern@glfw@examples@gears.c.blob  extern@glfw@examples@heightmap.c.blob  extern@glfw@examples@offscreen.c.blob  extern@glfw@examples@particles.c.blob  extern@glfw@examples@sharing.c.blob  extern@glfw@examples@simple.c.blob  extern@glfw@examples@splitview.c.blob  extern@glfw@examples@wave.c.blob  extern@glfw@include@GLFW@glfw3.h.blob  extern@glfw@include@GLFW@glfw3native.h.blob  extern@glfw@src@cocoa_joystick.h.blob  extern@glfw@src@cocoa_platform.h.blob  extern@glfw@src@context.c.blob  extern@glfw@src@egl_context.c.blob  extern@glfw@src@egl_context.h.blob  extern@glfw@src@glx_context.c.blob  extern@glfw@src@glx_context.h.blob  extern@glfw@src@init.c.blob  extern@glfw@src@input.c.blob  extern@glfw@src@internal.h.blob  extern@glfw@src@linux_joystick.c.blob  (+52 more)
Docs/: Components.puml
assets/: shader.vert
hfg/: 2dGraphics.c  2dGraphics.h  2dMath.c  2dMath.h  2dPhysics.c  2dPhysics.h  2dSpline.c  2dSpline.h  CMakeLists.txt  datastructurs.h
hfg/assets/: image.frag  image.vert
rs-space/: Cargo.toml
src/: CMakeLists.txt  game.c  game.h  input.c  input.h  main.c  map.c  map.h  player.c  player.h  spaceracer.c  spaceracer.h  window.c  window.h
test/: CMakeLists.txt  test.c
test/game/: CMakeLists.txt  test.c
test/input/: CMakeLists.txt  test.c
test/map/: CMakeLists.txt  test.c
test/player/: CMakeLists.txt  test.c
(+8 files in other folders)
